--- a/tutorials/tutorial1/tutorial1_linearRegression.Rmd
+++ b/tutorials/tutorial1/tutorial1_linearRegression.Rmd
@@ -23,15 +23,17 @@ htmltools::img(src = knitr::image_uri("../../assets/pic/320px-UNFPA_logo.svg.png
                alt = 'logo', style = 'position:absolute; top:60px; right:0; padding:20px; width: 25%; height: auto')
 ```
 
-\\ ![](../../assets/pic/wp_logotype_gray_low.png)
+![](../../assets/pic/wp_logotype_gray_low.png)
 
 ```{r, include=F}
-library(tidyverse)
-library(ggdag)
-library(kableExtra)
-library(here)
-library(rstan)
-library(tictoc)
+# 1 Set-up ---
+
+# load libraries
+library(tidyverse) # managing data
+library(ggdag) # drawing DAG
+library(kableExtra) # visualising table
+library(here) # handling path
+library(rstan) # running Bayesian models
 ```
 
 # Introduction
@@ -73,28 +75,43 @@ interface `rstan`.
 
 ## Pre-requisites
 
--   Know these concepts (... just a quick Wikipedia search):
+Know these concepts:
+
+-   Probabilistic distribution
 
     -   [Linear
         regression](https://en.wikipedia.org/wiki/Linear_regression)
 
-    -   Normal distribution, Poisson distribution, Log-normal
-        distribution
+    -   [Normal
+        distribution](https://en.wikipedia.org/wiki/Normal_distribution),
+        [Poisson
+        distribution](https://en.wikipedia.org/wiki/Poisson_distribution),
+        [Log-normal
+        distribution](https://en.wikipedia.org/wiki/Log-normal_distribution)
 
-    -   [Markov chain Monte Carlo
-        (MCMC)](https://en.wikipedia.org/wiki/Markov_chain_Monte_Carlo)
-        (chains, convergence, etc.)
+-   [Markov chain Monte Carlo
+    (MCMC)](https://en.wikipedia.org/wiki/Markov_chain_Monte_Carlo)
+    (chains, convergence, etc.)
 
-        -   [Markov chains explained
-            visually](https://setosa.io/ev/markov-chains/)
+    -   [Markov chains explained
+        visuall](https://setosa.io/ev/markov-chains/)
+    -   [Metropolis-Hastings Monte
+        Carlo](https://www.bayesrulesbook.com/chapter-7.html)
 
-    -   Software: [Stan](https://mc-stan.org/users/documentation/)
+-   [Prior probability](https://en.wikipedia.org/wiki/Prior_probability)
 
-    -   [Prior probability
-        distributions](https://en.wikipedia.org/wiki/Prior_probability)
+-   Software: [Stan](https://mc-stan.org/users/documentation/)
 
--   Install [Stan software and rstan
-    interface](https://github.com/stan-dev/rstan/wiki/RStan-Getting-Started)
+    *Stan is a C++ library for Bayesian modeling and inference that
+    primarily uses the No-U-Turn sampler (NUTS) @homan to obtain
+    posterior simulations given a user-specified model and data*
+
+-   Interface: [rstan](https://mc-stan.org/rstan/articles/rstan.html)
+
+    *The rstan package allows one to conveniently fit Stan models from R
+    (R Core Team 2014) and access the output, including posterior
+    inferences and intermediate quantities such as evaluations of the
+    log posterior density and its gradients.*
 
 # Switching to a Bayesian mindset
 
@@ -111,7 +128,7 @@ structures and customized modelling blocks. Our linear regression can
 also be represented using a directed acyclic graph (DAG):
 
 ```{r, echo=F}
-
+# draw linear model DAG
 dagify(
     Y ~ mu,
     Y ~ sigma,
@@ -189,9 +206,9 @@ Next, install the following packages within RStudio:
     <https://github.com/stan-dev/rstan/wiki/RStan-Getting-Started>
 
 ```{r}
+# stan setup
 options(mc.cores = parallel::detectCores()-1)
-rstan::rstan_options(auto_write = TRUE)
-rstan::rstan_options(javascript = FALSE)
+rstan::rstan_options(auto_write = TRUE) # speed up running time 
 ```
 
 -   Install a set of data wrangling packages by typing the following in
@@ -207,7 +224,13 @@ rstan::rstan_options(javascript = FALSE)
 
 Finally let's download the data we will be modelling
 
+```{r, include=F}
+# 2 Introduce the data ---
+```
+
 ```{r, eval=F}
+
+# download  tutorial data
 download.file(
   "https://www.pnas.org/highwire/filestream/949050/field_highwire_adjunct_files/1/pnas.1913050117.sd01.xls",
   'tutorials/data/nga_demo_data.xls',
@@ -227,8 +250,8 @@ surveys are further described in @leasure2020 and @weber2018.
 
 The sample locations is shown in Figure \@ref(fig:ngamap).
 
-```{r, ngamap, echo = FALSE, fig.cap = "Map of microcensus survey as the number of survey locations within a 20 km grid cell. Region groupings are shaded and numbered R1 - R11. Source: Leasure et al. (2020).", fig.align='center'}
-
+```{r ngamap, echo = FALSE, fig.cap = "Map of microcensus survey as the number of survey locations within a 20 km grid cell. Region groupings are shaded and numbered R1 - R11. Source: Leasure et al. (2020).", fig.align='center'}
+# map sample locations
 knitr::include_graphics("../../assets/pic/tuto1_nga_mez.PNG")
 ```
 
@@ -245,7 +268,9 @@ the sample design:
 Let's look at the table:
 
 ```{r}
+#load data
 data <- readxl::read_excel(here('tutorials/data/nga_demo_data.xls'))
+# create unique cluster id
 data <- data %>% 
   mutate(
     id= paste0('cluster_',(1:n())) # compute cluster id
@@ -261,6 +286,7 @@ settled area (\`A\`) in hectares.
 We want model the distribution of population count at each survey site:
 
 ```{r pop-distrib,class.source = 'fold-hide', fig.cap='Observed population count distribution'}
+# plot population count
 ggplot(data, aes(x=N, y=..density..))+
   geom_histogram(bins=50)+
   geom_density(aes(x=N,y=..density..), size=1, color='orange')+
@@ -287,7 +313,9 @@ population 〜 Normal( \alpha, \sigma )
 $$
 
 ```{r, echo=F}
+# 3 Model1: Normal distribution ---
 
+# Normal model DAG
 dagify(
   Population ~ alpha,
   Population ~ sigma,
@@ -313,6 +341,7 @@ tails to reduce the information given to the estimation process, and
 thus the bias introduced.
 
 ```{r,class.source = 'fold-hide', fig.cap='Prior distribution for alpha'}
+# plot alpha prior 
 ggplot(data %>% mutate(color='Observed data'), aes(x=N, y=..density..))+
   geom_histogram(bins=50, aes(fill=color, color=color))+
   geom_density(data=data.frame(x=rnorm(1000, 0,5000), color=rep( 'Prior distribution for alpha', 1000)), aes(x=x,y=..density.., color=color), size=1)+
@@ -392,6 +421,7 @@ We will store the model in a `stan` file called `tutorial1_model1.stan`.
 Stan software takes as input a list of the observed data.
 
 ```{r}
+# prepare data for stan
 stan_data <- list(
   population = data$N,
   n = nrow(data))
@@ -456,6 +486,7 @@ Markov chain iterations. A good traceplot sees the mixing of the
 different chains, evidence of convergence to a single estimate.
 
 ```{r model1-trace, fig.cap='Model 1 Traceplot'}
+# plot trace
 stan_trace(fit, inc_warmup = T)
 ```
 
@@ -475,6 +506,7 @@ $\hat\sigma$ and see how they compare with the observed average and
 standard deviation.
 
 ```{r,class.source = 'fold-hide', warning=F, message=F}
+# plot estimated parameters
 mean_pop <- mean(data$N)
 sd_pop <- sd(data$N)
 
@@ -548,6 +580,7 @@ iteration.
 We rerun the model:
 
 ```{r}
+# parameter to monitor
 pars <- c('alpha','sigma', 'population_hat')
 
 # mcmc
@@ -564,6 +597,7 @@ fit_model1 <- rstan::stan(file = file.path('./tutorial1_model1bis.stan'),
 And extract the predicted population count.
 
 ```{r, warning=F}
+# extract predictions
 predicted_pop_model1 <- as_tibble(extract(fit_model1, 'population_hat')$population_hat)
 
 colnames(predicted_pop_model1) <- data$id
@@ -581,6 +615,7 @@ We get thus a posterior prediction distribution of population count for
 every cluster.
 
 ```{r, class.source = 'fold-hide',fig.cap='Example of posterior prediction distribution for one cluster'}
+# plot posterior prediction for one cluster
 ggplot(predicted_pop_model1, aes(x=cluster_1))+
   geom_density(size=1.5, color='orange')+
   theme_minimal()+
@@ -592,7 +627,7 @@ We can thus extract for every cluster its mean prediction and 95%
 credible interval.
 
 ```{r}
-
+# summarize predictions
 comparison_df <- predicted_pop_model1 %>% 
       pivot_longer(everything(),names_to = 'id', values_to = 'predicted') %>% 
       group_by(id) %>% 
@@ -608,10 +643,12 @@ choosing a Normal distribution for representing the population count.
 Let's see the global picture:
 
 ```{r model1-comp, fig.cap='Comparison between observed and predicted population count (with the Normal model). Orange line indicates the 1:1 line'}
+# add observed values
 comparison_df <- comparison_df %>% 
   left_join(data %>% 
               select(id, N), by = 'id')
 
+# plot predicted vs observed
 ggplot(comparison_df) +
   geom_pointrange(aes(x=N, y=predicted_mean, ymin=predicted_lower, ymax=predicted_upper
                       ),
@@ -644,7 +681,7 @@ We can compute goodness-of-fit metrics to complete the picture:
     predictions and observations
 
 ```{r model1-metrics }
-
+# compute goodness-of-fit metrics
 comparison_df %>%
   mutate(residual = predicted_mean-N,
           in_CI = ifelse(N>predicted_lower &N<predicted_upper, T, F)) %>% 
@@ -687,10 +724,14 @@ A continuous variable that can be extracted from our data is the
 **population density.**
 
 ```{r, class.source = 'fold-hide', fig.cap='Observed population density distribution'}
+# 4 Model2: Poisson-Lognormal distribution ---
+
+# compute population density
 data <- data %>% 
   mutate(
-    pop_density = N/A #compute population density
+    pop_density = N/A 
   )
+# plot population density
 ggplot(data, aes(x=pop_density, y=..density..))+
   geom_histogram(bins=50)+
   geom_density(size=1, color='orange')+
@@ -712,6 +753,7 @@ ranges between `r round(min(data$A),2)` and `r round(max(data$A))`
 hectares.
 
 ```{r distrib-comp,class.source = 'fold-hide', fig.cap="Response variable distribution comparaison"}
+# compare population density and population count
 ggplot(data %>% 
          select(id, N, pop_density) %>% 
          rename("Population count"=N,
@@ -750,6 +792,29 @@ population 〜 Poisson( \lambda ) \\
 
 \end{equation}
 ```
+Note that this equation is equivalent to:
+```{=tex}
+\begin{equation}
+
+population 〜 Poisson( \lambda ) \\
+
+log(\lambda)  〜 Normal( \alpha, \sigma)
+
+\end{equation}
+```
+Under this form we see that the model is not linear, but log-linear.
+It can be rewritten as:
+
+```{=tex}
+\begin{equation}
+
+population 〜 Poisson( \lambda ) \\
+
+\lambda  〜 exp(Normal( \alpha, \sigma))
+
+\end{equation}
+```
+
 In our particular case, we decompose $\lambda$ as the
 $population\_density * settled\_area$ which introduces a continuous
 variable, $population\_density$.
@@ -761,7 +826,7 @@ standard deviation of population density on the log scale.
 We set up their priors similarly as before and retrieve from the data
 that the log observed mean is `r round(log(median(data$N)),2)` and the
 observed log geometric standard deviation is
-`r round(log(EnvStats::geoSD(data$pop_density)),2)` .
+`r round(log(EnvStats::geoSD(data$pop_density)),2)`.
 
 ```{=tex}
 \begin{equation}
@@ -823,7 +888,7 @@ We store the model under `tutorial1_model2.stan`, and prepare the
 corresponding data:
 
 ```{r}
-# model data
+# prepare data for stan
 stan_data_model2 <- list(
   population = data$N,
   n = nrow(data),
@@ -835,9 +900,8 @@ Then we can declare the parameters to monitor (including `density_hat`)
 and run the model.
 
 ```{r}
-#
+# set paameters to monitor
 pars <- c('alpha','sigma', 'population_hat', 'density_hat')
-
 
 # mcmc
 fit_model2 <- rstan::stan(file = file.path('tutorial1_model2.stan'), 
@@ -866,6 +930,7 @@ Solution
 We plot the traceplot:
 
 ```{r}
+# plot trace
 traceplot(fit_model2, c('alpha', 'sigma'))
 ```
 
@@ -878,12 +943,13 @@ specification.
 We plot the predicted density and the predicted count:
 
 ```{r, class.source = 'fold-hide',}
-
+# extract posterior predictions
 predicted_pop_model2 <- as_tibble(extract(fit_model2, 'population_hat')$population_hat)
 predicted_dens_model2 <- as_tibble(extract(fit_model2, 'density_hat')$density_hat)
 colnames(predicted_pop_model2) <- data$id
 colnames(predicted_dens_model2) <- data$id
 
+# summarise posterior predictions
 comparison_df <- rbind(predicted_dens_model2 %>% 
    pivot_longer(everything(),names_to = 'id', values_to = 'predicted') %>% 
    group_by(id) %>% 
@@ -906,7 +972,7 @@ comparison_df <- rbind(predicted_dens_model2 %>%
   left_join(data %>% 
               select(id, N) %>% 
               rename(reference=N), by = 'id'))
-
+# plot posterior predictions
 ggplot(comparison_df %>% 
          mutate(type= factor(type, levels=c('Population density', 'Population count')))) +
   geom_pointrange(aes(x=reference, y=predicted_mean, ymin=predicted_lower, ymax=predicted_upper
@@ -922,13 +988,14 @@ ggplot(comparison_df %>%
 
 We see for the `population_density` the same estimation pattern than in
 the Normal model, that is a similar posterior prediction distribution
-for every cluster. The predicted `population_count` is however
+for every cluster. The predicted `population_count` is in contrast is
 influenced by the `settled_area`.
 
 The goodness-of-fit of the Poisson-Lognormal distribution is however not
 good:
 
 ```{r,class.source = 'fold-hide'}
+# compute goodness-of-fit metrics
 comparison_df %>%
   filter(type=='Population count') %>% 
   mutate(residual = predicted_mean-reference,
@@ -971,8 +1038,11 @@ population 〜 Normal( \alpha, \sigma ) \\
 We store this model under `tutorial1_model1wrong.stan` and run it:
 
 ```{r}
+# 5 Test prior ---
+# set parameters to monitor
 pars <- c('alpha','sigma')
 
+# mcmc
 fit_wrong <- rstan::stan(file = file.path('tutorial1_model1wrong.stan'), 
                    data = stan_data,
                    iter = warmup + iter, 
@@ -990,10 +1060,16 @@ nice overview of parameters tuning please check:
 The traceplot indicates clear convergence issue:
 
 ```{r}
+# plot trace
 traceplot(fit_wrong)
 ```
 
 First the estimation of `alpha` did not converge. Second the estimation
 of `sigma` is blocked at 5 which is the upper bound of the prior.
+
+```{r, include=F, purl = FALSE}
+# convert rmd code to normal r script
+knitr::purl("tutorial1_linearRegression.Rmd", documentation = 0)
+```
 
 # References
