--- a/tutorials/tutorial1/references.bib
+++ b/tutorials/tutorial1/references.bib
@@ -29,3 +29,10 @@ PMID: 32929009},
 	doi = {10.1016/j.rse.2017.09.024},
 	url = {http://www.sciencedirect.com/science/article/pii/S0034425717304364}
 }
+
+@article{homan,
+	title = {The No-U-Turn Sampler: Adaptively Setting Path Lengths in Hamiltonian Monte Carlo},
+	author = {{Ho{ff}man}, {Matthew D} and {Gelman}, {Andrew}},
+	pages = {31},
+	langid = {en}
+}
